Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-06 Kimmo
 PATCH: [ 1482688 ] sgml.cpp contains "lt" twice
  Src/editlib: sgml.cpp
 PATCH: [ 1482694 ] xml.cpp contains "lt" twice
  Src/editlib: xml.cpp

2006-05-04 WinMerge experimental release 2.5.3.7 (cvs)

2005-05-04 Kimmo
 PATCH: [ 1481213 ] Fix foldercompare short-size suffixes and localize them
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1481391 ] Make LocationView update from MergeView more safe
  Src: LocationView.cpp MergeEditView.cpp MergeEditView.h
 BUG: [ 1456356 ] Scrollbars sometimes not initially active
  Another possible fix..
  Src/editlib: ccrystaltextview.cpp

2006-05-03 Kimmo
 PATCH: [ 1480652 ] Small fix for XML syntax highlight
  Src/editlib: xml.cpp

2006-05-02 Kimmo
 PATCH: [ 1479007 ] WinMerge Icon Set Revision 3
  Submitted by Alexander Skinner
  Src/res: Merge.ico
 BUG: [ 1474782 ] Crash when comparing SQL with with binary data
  Fix suggested by anonymous submitter
  Src/editlib: asp.cpp basic.cpp batch.cpp cplusplus.cpp csharp.cpp dcl.cpp
   fortran.cpp html.cpp ini.cpp innosetup.cpp is.cpp java.cpp lisp.cpp nsis.cpp
   pascal.cpp perl.cpp php.cpp python.cpp rexx.cpp rsrc.cpp sgml.cpp sh.cpp
   siod.cpp sql.cpp tcl.cpp tex.cpp xml.cpp
 PATCH: [ 1471835 ] Fix setting filename in folder-compare report dialog
  Fix bug in the original patch
  Src: DirCmpReportDlg.cpp

2006-05-01 Takashi
 PATCH: [ 1475649 ] Enable selection margin and line numbers
  Src/res new file: mg_icons.bmp

2006-04-29 Takashi
 PATCH: [ 1475649 ] Enable selection margin and line numbers
  Src: GhostTextView.cpp GhostTextView.h Merge.rc MergeEditView.cpp
   MergeEditView.h OptionsDef.h OptionsInit.cpp resource.h
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h editcmd.h
  Src/Languages/*: Merge*.rc

2006-04-28 Tim
 PATCH: [ 1477957 ] Fix 'Help' button position in German translation